# saliency_detection

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  stack.xml
src/: saliencyDetectionHou.cpp  saliencyDetectionItti.cpp  saliencyDetectionRudinac.cpp
