<?xml version="1.0"?>
<package>
  <name>saliency_detection</name>
  <version>0.1.2</version>
  <description>
	Create saliency maps using one of the following algorithms:
	Hou
	Itti
	Rudinac
  </description>
  <maintainer email="todo@todo.todo">Joris van de Weem</maintainer>
  <license>GPL</license>

  <url type="website">http://wiki.ros.org/saliency_detection</url>

  <author email="todo@todo.todo">Joris van de Weem</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
